[package]
name = "bfinv"
version = "1.1.1"
authors = ["Yuki Suzuki <y-suzuki@radiol.med.osaka-u.ac.jp>"]
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
phf = { version = "0", features = ["macros"] }
phf_macros = "0"
digest = "0"
md-5 = "0"
sha-1 = "0"
sha2 = "0"
sha3 = "0"
hex = "0"
num_cpus = "1"